--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+main{
+	width:"150px";
+	height:"150px";
+	background-color:black;
+}
+.hello-accio-job{
+	color:"white";
+	margin-left:80px;
+	padding:10px;
+}
