--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ main{
 	height: 150px;
 	background-color: black;
 }
-.hello-accio{
+.hello-accio-job{
 	color:white ;
 	margin-left: 32px;
 	padding: 10px;
